--- a/.eslintrc
+++ b/.eslintrc
@@ -3,8 +3,5 @@ root: true
 env:
   browser: true
 
-"rules": {
-  "semi": ["error", "always"],
-  "quotes": ["error", "single"]
-}
-
+extends:
+  "htmlacademy/es5"
