--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-sync": "^2.26.7",
     "del": "^3.0.0",
     "eslint": "^6.1.0",
+    "eslint-config-htmlacademy": "^0.5.2",
     "gulp": "4.0.x",
     "gulp-csso": "^3.0.1",
     "gulp-imagemin": "^4.1.0",
@@ -24,8 +25,8 @@
     "gulp-webp": "^3.0.0",
     "posthtml-include": "^1.1.0",
     "run-sequence": "^2.2.1",
-    "stylelint": "9.2.x",
-    "stylelint-config-htmlacademy": "0.1.x"
+    "stylelint": "^10.1.0",
+    "stylelint-config-htmlacademy": "^0.1.4"
   },
   "editorconfig-cli": [
     "*.json",
