Добавляет исключения для eslint, правит ошибку инициализации Ellipsis

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,11 @@ extends:
 globals:
   "Sticky": true
   "bodyScrollLock": true
+  "Ellipsis": true
+  "wNumb": true
+  "SlimSelect": true
+  "noUiSlider": true
+  "Swiper": true
 
 rules: {
     "no-new": 0
