--- a/package.json
+++ b/package.json
@@ -6,26 +6,26 @@
   "description": "",
   "devDependencies": {
     "autoprefixer": "9.6.1",
-    "browser-sync": "^2.26.13",
-    "del": "^3.0.0",
-    "eslint": "^6.1.0",
-    "eslint-config-htmlacademy": "^0.5.2",
+    "browser-sync": "2.26.13",
+    "del": "3.0.0",
+    "eslint": "6.4.0",
+    "eslint-config-htmlacademy": "0.5.2",
     "gulp": "4.0.x",
-    "gulp-csso": "^3.0.1",
-    "gulp-imagemin": "^4.1.0",
+    "gulp-csso": "3.0.1",
+    "gulp-imagemin": "4.1.0",
     "gulp-plumber": "1.2.x",
     "gulp-postcss": "8.0.x",
-    "gulp-posthtml": "^3.0.4",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-svgstore": "^6.1.1",
-    "gulp-uglify": "^3.0.2",
-    "gulp-webp": "^3.0.0",
-    "posthtml-include": "^1.1.0",
-    "run-sequence": "^2.2.1",
-    "stylelint": "^10.1.0",
-    "stylelint-config-htmlacademy": "^0.1.4"
+    "gulp-posthtml": "3.0.4",
+    "gulp-rename": "1.4.0",
+    "gulp-sass": "4.0.2",
+    "gulp-sourcemaps": "2.6.5",
+    "gulp-svgstore": "6.1.1",
+    "gulp-uglify": "3.0.2",
+    "gulp-webp": "3.0.0",
+    "posthtml-include": "1.2.0",
+    "run-sequence": "2.2.1",
+    "stylelint": "10.1.0",
+    "stylelint-config-htmlacademy": "0.1.4"
   },
   "editorconfig-cli": [
     "*.json",
@@ -53,6 +53,6 @@
   ],
   "version": "14.0.0",
   "dependencies": {
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "2.6.1"
   }
 }
